Update the README file and include new scripts for convenience